Update github actions.

--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -19,3 +19,5 @@ jobs:
     steps:
       - name: Conventional Changelog Action
         uses: TriPSs/conventional-changelog-action@v3
+        with:
+          github-token: ${{ secrets.github_token }}
