--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -17,6 +17,14 @@ jobs:
   conventional-changelog-action:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Use Node v14
+        uses: actions/setup-node@v2
+        with:
+          node-version: "14"
+      - name: Install dependencies
+        run: npm ci
       - name: Conventional Changelog Action
         uses: TriPSs/conventional-changelog-action@v3
         with:
