--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -19,11 +19,17 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Use Node v14
-        uses: actions/setup-node@v2
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
         with:
-          node-version: "14"
-      - name: Conventional Changelog Action
-        uses: TriPSs/conventional-changelog-action@v3
-        with:
-          github-token: ${{ secrets.github_token }}
+          php-version: "8.0"
+      - name: Install Dependencies
+        run: composer install
+      # - name: Use Node v14
+      #   uses: actions/setup-node@v2
+      #   with:
+      #     node-version: "14"
+      # - name: Conventional Changelog Action
+      #   uses: TriPSs/conventional-changelog-action@v3
+      #   with:
+      #     github-token: ${{ secrets.github_token }}
