--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,5 @@
     "require-dev": {
         "marcocesarato/php-conventional-changelog": "^1.12"
     },
-    "version": ""
+    "version": "1.0.0"
 }
